# october

./: .clang-format  .codecov.yml  .travis.yml  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
benchmark/src/: geometry_benchmark.cc  node_benchmark.cc  tree_benchmark.cc
include/: geometry.h  node.h  tracer.h  tree.h
test/: CMakeLists.txt
test/include/: geometry_data.h  intersection_data.h
test/src/: geometry_test.cc  node_test.cc  tracer_test.cc  tree_test.cc
tools/: check_code.sh  check_style.sh  collect_coverage.sh
